@@ -19,7 +19,7 @@
 <layout version="0.1.0">
     <default>
         <reference name="head">
-            <!-- Uncomment these lines to enable JS password validation (see README) -->
+            <!-- Uncomment these lines to enable JS password validation (see developer documentation) -->
             <!--<action method="addItem" ifconfig="phgdpr/fonctionality/password_format_validation" condition="1">-->
                 <!--<type>skin_js</type>-->
                 <!--<file>js/ph/gdpr/password-validation.js</file>-->
