@@ -23,6 +23,7 @@
   ],
   "require-dev": {
     "generate-modman/generate-modman": "dev-master",
-    "friendsofphp/php-cs-fixer": "^2.13"
+    "friendsofphp/php-cs-fixer": "^2.13",
+    "squizlabs/php_codesniffer": "^3.3"
   }
 }
